Revision history for JSON-Schema-Modern

{{$NEXT}}

0.566     2023-05-11 03:34:59Z
          - treat ambiguous types as a normal error, rather than an exception
            which may provide incorrect location data

0.565     2023-03-12 21:19:27Z
          - traverse and evaluate callbacks can now produce errors,
            which are incorporated into the overall evaluation results
          - fix bad handling of empty patterns in "pattern",
            "patternProperties" keywords

0.564     2023-03-04 00:43:42Z
          - further tweak performance by short-circuiting inside some
            subschemas (but not when annotations must be collected for
            "unevaluated" keywords)
          - added support for 'base64url' encoding

0.563     2023-02-04 23:38:13Z
          - documentation update: improve language around data types and
            JSON decoder recommendations

0.562     2023-01-22 00:49:07Z
          - bump a test prereq to fix a mismatched exception message

0.561     2023-01-07 20:57:37Z
          - further tweak performance by only collecting annotations when
            explicitly requested, or needed by the current evaluation scope

0.560     2022-12-20 20:00:05Z
          - fix a test that depended on optional prereqs

0.559     2022-12-16 04:29:55Z
          - fix regression where formats do not validate beyond a $ref (since
            v0.556)

0.558     2022-11-26 02:43:15Z
          - add fallback media type handling for text/*
          - performance is (hopefully) improved by delaying some calculations
            in annotations until they are needed

0.557     2022-10-30 21:59:04Z
          - improvements to processing of keywords in the Content vocabulary
            (contentEncoding, contentMediaType, contentSchema)
          - LICENSE now provided with bundled metaschema files

0.556     2022-09-18 22:41:50Z
          - some performance optimizations for schema traversal and evaluation

0.555     2022-09-10 21:43:11Z