@@ -25,7 +25,7 @@ sub vocabulary {
   'https://json-schema.org/draft/2020-12/vocab/format-annotation' => 'draft2020-12';
 }
 
-sub evaluation_order { 3 }
+sub evaluation_order { 2 }
 
 sub keywords {
   qw(format);
